[package]
name = "draco_macros"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snax = "0.3.0"
quote = "1.0.2"
proc-macro2 = "1.0.6"
syn = "1.0.7"
proc-macro-hack = "0.5.11"
